Add the plugin list to the forrest domain
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@55276 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/default-forrest.properties
+++ b/src/core/context/default-forrest.properties
@@ -28,7 +28,7 @@ project.skin=pelt
 
 # comma separated list, file:// is supported
 forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml
-forrest.plugins.descriptors=http://www.apache.org/~rgardler/testingGround/forrestPlugins/plugins.xml
+forrest.plugins.descriptors=http://forrest.apache.org/plugins/plugins.xml
 
 ##############
 # behavioural properties
