Add the version number to the build message.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@55306 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -301,7 +301,7 @@
   *-----------------------------------------------------------------
   | Installation notice 
   *-----------------------------------------------------------------
-  | You have built the distribution of Forrest.
+  | You have now built the ${forrest.version} version of Forrest.
   | Please set the environment variable FORREST_HOME to point to src/core
   | It is recommended to add
   |    unix: $FORREST_HOME/bin: to your $PATH
