update paths for restructure
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@55705 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrestcore/build.xml
+++ b/forrestcore/build.xml
@@ -16,7 +16,7 @@
 -->
 <project default="jar" basedir="." name="Forrest build file">
 
-  <import file="src/forrestbar/build.xml"/>
+  <import file="../tools/forrestbar/build.xml"/>
   
   <description>
     Build system for Apache Forrest.
@@ -49,7 +49,7 @@
     
     <property name="src-fresh-site"         location="src/core/fresh-site"/>
     
-    <property name="forrestbot.dir"         location="src/forrestbot"/>
+    <property name="forrestbot.dir"         location="../tools/forrestbot"/>
 
     <buildnumber file="etc/build.number"/>
     <echo>
