ignore 'build' dir; update paths due to restructure
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@55709 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/forrestbar/build.xml
+++ b/tools/forrestbar/build.xml
@@ -14,7 +14,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<project default="forrestbar" basedir="../.." name="forrestbar">
+<project default="forrestbar" basedir="." name="forrestbar">
 
   <description>Build script for the forrestbar</description>
   
@@ -28,7 +28,7 @@
   <!-- ForrestBar for Mozilla and MozillaFirebird                          -->
   <!-- =================================================================== -->
   <target name="forrestbar" depends="init">
-    <property name="xpi.dir" location="src/forrestbar/xpi"/>  
+    <property name="xpi.dir" location="xpi"/>  
     <mkdir dir="${build.dir}" />
     <mkdir dir="${build.dir}/work/forrestbar" />
     <mkdir dir="${build.dir}/work/forrestbar-jar" />
