update build from SVN instructions
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@55736 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrestcore/src/documentation/content/xdocs/build.xml
+++ b/forrestcore/src/documentation/content/xdocs/build.xml
@@ -59,7 +59,8 @@
    <section id="building">
      <title>Building and Installing Forrest</title>
      <p>
-       To build Forrest, type '<code>build</code>' on Windows, or '<code>./build.sh</code>' on
+       To build Forrest, change directory to '<code>forrest/forrestcore</code>', and
+	   then type '<code>build</code>' on Windows or '<code>./build.sh</code>' on
        Unix. If everything is successful, you should see a message like this:
      </p>
      <source>
@@ -81,8 +82,8 @@
        command is available everywhere:
      </p>
      <source>
-~/apache/forrest$ export FORREST_HOME=`pwd`/src/core
-~/apache/forrest$ export PATH=$PATH:$FORREST_HOME/bin
+~/forrest/forrestcore$ export FORREST_HOME=`pwd`/src/core
+~/forrest/forrestcore$ export PATH=$PATH:$FORREST_HOME/bin
      </source>
      <p>
        After updating the Forrest source from SVN if there have been certain types of
