Remove OpenOffice.org functionality (now in pluing)
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@55906 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrestcore/src/core/context/default-forrest.properties
+++ b/forrestcore/src/core/context/default-forrest.properties
@@ -139,4 +139,5 @@ project.bugtracking-url=http://issues.apache.org/bugzilla/show_bug.cgi?id=
 project.i18n=false
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=
+# Run "forrest available-plugins" for a list of plug-ins currently available
+project.required.plugins=openOffice.org
