--- a/forrestcore/src/core/context/default-forrest.properties
+++ b/forrestcore/src/core/context/default-forrest.properties
@@ -140,4 +140,5 @@ project.i18n=false
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=openOffice.org
+project.required.plugins=openOffice.org,simplified-docbook
+
