default for seeded sites is to use no plugins
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@56009 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrestcore/src/core/fresh-site/forrest.properties
+++ b/forrestcore/src/core/fresh-site/forrest.properties
@@ -104,4 +104,5 @@
 #project.i18n=true
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-# project.required.plugins=
+# Run "forrest available-plugins" for a list of plug-ins currently available
+project.required.plugins=
