Put build number in the build dir.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@56157 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrestcore/build.xml
+++ b/forrestcore/build.xml
@@ -49,7 +49,7 @@
     
     <property name="forrestbot.dir"         location="../tools/forrestbot"/>
 
-    <buildnumber file="etc/build.number"/>
+    <buildnumber file="${build.dir}/build.number"/>
     <echo>
       --------------------------------------------------------------
 
