Remove properties.xml as it contains just one set of values. Integrated them in build.xml.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@56248 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrestcore/build.xml
+++ b/forrestcore/build.xml
@@ -27,8 +27,19 @@
     </tstamp>
 
     <xmlproperty file="status.xml"     prefix="xstatus"  keeproot="false" collapseAttributes="true" />   
-    <xmlproperty file="properties.xml"                   keeproot="false" collapseAttributes="true" />
 
+    <property name="build.compiler.emacs"       value="on"/>
+    <property name="build.compiler.warnings"    value="true"/>
+    <property name="build.compiler.pedantic"    value="false"/>
+    <property name="build.compiler.depend"      value="true"/>
+    <property name="build.compiler.fulldepend"  value="true"/>
+    <property name="build.compiler.debug"       value="on"/>    
+    <property name="build.compiler.optimize"    value="off"/>
+    <property name="build.compiler.deprecation" value="on"/>
+    <property name="build.compiler.nowarn"      value="on"/>    
+    <property name="build.compiler.type"        value="classic"/>
+    <property name="build.compiler.vm"          value="1.2"/>
+   
     <property name="name" value="apache-forrest"/>
     <property name="forrest.version" value="0.7-dev"/>
 
