Reenable site generation.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@56251 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -20,8 +20,11 @@ project.name=forrest
 
 #project.skin=Don't specify a skin for Forrest, we will always use the 
 #             default one defined in src/core/context/default-forrest.properties
-
-project.configfile=${project.home}/src/documentation/conf/cli.xconf
+project.content-dir=/site
+project.xdocs-dir=${project.content-dir}/content/xdocs
+project.raw-content-dir=${project.content-dir}/content
+project.configfile=${project.home}/site/conf/cli.xconf
+project.skinconf=${project.content-dir}/skinconf.xml
 
 project.bugtracking-url=http://issues.cocoondev.org/browse/
 project.issues-rss-url=http://issues.cocoondev.org/IssueNavigator.jspa?pid=10000&fixfor=10031&resolutionIds=-1&tempMax=25&view=rss&reset=true
