Move java files up one level and change build file accordingly.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@56252 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrestcore/build.xml
+++ b/forrestcore/build.xml
@@ -43,7 +43,7 @@
     <property name="name" value="apache-forrest"/>
     <property name="forrest.version" value="0.7-dev"/>
 
-    <property name="java.dir"              location="src/java"/>
+    <property name="java.dir"              location="java"/>
     <property name="plugins.dir"           location="../plugins"/>
     <property name="build.dir"             location="../build"/>
     <property name="build.docs"            location="${build.dir}/docs"/>
