--- a/plugins/OpenOffice.org/docs/forrest.properties
+++ b/plugins/OpenOffice.org/docs/forrest.properties
@@ -105,4 +105,4 @@
 
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=openOffice.org
+project.required.plugins=OpenOffice.org
