Fix another side-effect of the SVN restructure.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@56456 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/content/dtd/.htaccess
+++ b/site/content/dtd/.htaccess
@@ -20,10 +20,10 @@
 # FIXME: Verify these media types and maybe add charset
 #
 RewriteEngine On
-RewriteRule "(.*)\.dtd$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/src/core/context/resources/schema/dtd/$1.dtd?content-type=application/xml-dtd&root=Apache-SVN" [P]
-RewriteRule "(.*)\.mod$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/src/core/context/resources/schema/dtd/$1.mod?content-type=application/xml-dtd&root=Apache-SVN" [P]
-RewriteRule "(.*)\.pen$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/src/core/context/resources/schema/dtd/$1.pen?content-type=application/xml-external-parsed-entity&root=Apache-SVN" [P]
-RewriteRule "(.*)\.ent$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/src/core/context/resources/schema/dtd/$1.ent?content-type=application/xml-external-parsed-entity&root=Apache-SVN" [P]
+RewriteRule "(.*)\.dtd$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/main/webapp/resources/schema/dtd/$1.dtd?content-type=application/xml-dtd" [P]
+RewriteRule "(.*)\.mod$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/main/webapp/resources/schema/dtd/$1.mod?content-type=application/xml-dtd" [P]
+RewriteRule "(.*)\.pen$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/main/webapp/resources/schema/dtd/$1.pen?content-type=application/xml-external-parsed-entity" [P]
+RewriteRule "(.*)\.ent$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/main/webapp/resources/schema/dtd/$1.ent?content-type=application/xml-external-parsed-entity" [P]
 
 #--------------------------------------------------------------------------
 # NOTE: The following was suggested by someone to the forrest-dev
