--- a/dtd/.htaccess
+++ b/dtd/.htaccess
@@ -20,10 +20,10 @@
 # FIXME: Verify these media types and maybe add charset
 #
 RewriteEngine On
-RewriteRule "(.*)\.dtd$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/src/core/context/resources/schema/dtd/$1.dtd?content-type=application/xml-dtd&root=Apache-SVN" [P]
-RewriteRule "(.*)\.mod$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/src/core/context/resources/schema/dtd/$1.mod?content-type=application/xml-dtd&root=Apache-SVN" [P]
-RewriteRule "(.*)\.pen$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/src/core/context/resources/schema/dtd/$1.pen?content-type=application/xml-external-parsed-entity&root=Apache-SVN" [P]
-RewriteRule "(.*)\.ent$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/src/core/context/resources/schema/dtd/$1.ent?content-type=application/xml-external-parsed-entity&root=Apache-SVN" [P]
+RewriteRule "(.*)\.dtd$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/main/webapp/resources/schema/dtd/$1.dtd?content-type=application/xml-dtd" [P]
+RewriteRule "(.*)\.mod$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/main/webapp/resources/schema/dtd/$1.mod?content-type=application/xml-dtd" [P]
+RewriteRule "(.*)\.pen$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/main/webapp/resources/schema/dtd/$1.pen?content-type=application/xml-external-parsed-entity" [P]
+RewriteRule "(.*)\.ent$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/main/webapp/resources/schema/dtd/$1.ent?content-type=application/xml-external-parsed-entity" [P]
 
 #--------------------------------------------------------------------------
 # NOTE: The following was suggested by someone to the forrest-dev
