--- a/entity/.htaccess
+++ b/entity/.htaccess
@@ -7,4 +7,4 @@
 #--------------------------------------------------------------------------
 
 RewriteEngine On
-RewriteRule "(.*)\.pen$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/src/core/context/resources/schema/entity/$1.pen?content-type=application/xml-external-parsed-entity&root=Apache-SVN" [P]
+RewriteRule "(.*)\.pen$" "http://svn.apache.org/viewcvs.cgi/*checkout*/forrest/trunk/main/webapp/resources/schema/entity/$1.pen?content-type=application/xml-external-parsed-entity" [P]
