don't use simplified-docbook plugin. Workaround for FOR-348 which was preventing the publication of How-To documents
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@56498 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -28,3 +28,7 @@ project.skinconf=${project.content-dir}/skinconf.xml
 
 project.bugtracking-url=http://issues.cocoondev.org/browse/
 project.issues-rss-url=http://issues.cocoondev.org/IssueNavigator.jspa?pid=10000&fixfor=10031&resolutionIds=-1&tempMax=25&view=rss&reset=true
+# The names of plugins that are required to build the project
+# comma separated list (no spaces)
+# Run "forrest available-plugins" for a list of plug-ins currently available
+project.required.plugins=OpenOffice.org
