--- a/main/build.xml
+++ b/main/build.xml
@@ -56,7 +56,7 @@
     <property name="tools.jar"             location="${java.home}/../lib/tools.jar"/>
     <available file="${tools.jar}"         property="tools.jar.present"/>
     
-    <property name="src-fresh-site"         location="src/core/fresh-site"/>
+    <property name="src-fresh-site"         location="main/fresh-site"/>
     
     <property name="forrestbot.dir"         location="../tools/forrestbot"/>
 
@@ -157,6 +157,7 @@
       </classpath>
     </taskdef>
     <!-- skinconf.xml -->
+    <!-- FIXME: do we need to validate skinconf.xml to build forrest? -->
     <echo message="validating **/skinconf.xml ..."/>
     <xmlvalidate failonerror="true" lenient="no" warn="yes">
       <xmlcatalog id="xcat">
@@ -165,13 +166,13 @@
             location="./webapp/resources/schema/catalog.xcat"/>
         </catalogpath>
       </xmlcatalog>
-      <fileset dir="./src/core"
+      <fileset dir="./site"
         includes="**/skinconf.xml" />
     </xmlvalidate>
     <!-- All stylesheets **/*.xsl -->
     <echo message="validating stylesheets **/*.xsl ..."/>
     <jing rngfile="./webapp/resources/schema/relaxng/xslt.rng">
-      <fileset dir="./src/core" includes="**/*.xsl"/>
+      <fileset dir="./main" includes="**/*.xsl"/>
       <fileset dir="${tools.dir}" includes="**/*.xsl"/>
     </jing>
     <!-- sitemap.xmap -->
@@ -208,9 +209,9 @@
     </copy>
         
     <!-- Fix bin/ permissions -->
-    <fixcrlf eol="crlf" srcdir="${dist-shbat.dir}/src/core/bin" includes="*.bat"/>
-    <fixcrlf eol="lf" srcdir="${dist-shbat.dir}/src/core/bin" excludes="*.bat"/>
-    <chmod dir="${dist-shbat.dir}/src/core/bin" perm="ugo+rx" excludes="*.bat"/> 
+    <fixcrlf eol="crlf" srcdir="${dist-shbat.dir}/bin" includes="*.bat"/>
+    <fixcrlf eol="lf" srcdir="${dist-shbat.dir}/bin" excludes="*.bat"/>
+    <chmod dir="${dist-shbat.dir}/bin" perm="ugo+rx" excludes="*.bat"/> 
 
     <!-- Fix ant/bin/ permissions -->
     <fixcrlf eol="crlf" srcdir="${dist-shbat.dir}/tools/ant/bin" includes="*.bat"/>
@@ -225,7 +226,7 @@
   | Please find it at: ${dist-shbat.dir}
   | Please copy the contents to the install directory of your choice
   | Please have the environment variable FORREST_HOME point to
-  |  ${dist-shbat.dir}/src/core
+  |  ${dist-shbat.dir}
   | It is recommended to add
   |    unix: $FORREST_HOME/bin: to your $PATH
   |    win: %FORREST_HOME%\bin; to your %PATH%
@@ -256,7 +257,7 @@
           description="Test that the features are okay before committing."/>
 
   <target name="testseed" depends="init">
-    <property name="forrest.home" location="src/core" />  
+    <property name="forrest.home" location="." />  
     <property name="test.dir" value="${build.dir}/test"/>
     <delete dir="${test.dir}"/>
     <mkdir dir="${test.dir}"/>
@@ -306,7 +307,7 @@
   | Installation notice 
   *-----------------------------------------------------------------
   | You have now built the ${forrest.version} version of Forrest.
-  | Please set the environment variable FORREST_HOME to point to src/core
+  | Please set the environment variable FORREST_HOME to point to .
   | It is recommended to add
   |    unix: $FORREST_HOME/bin: to your $PATH
   |    win: %FORREST_HOME%\bin; to your %PATH%
