More changes following the svn restructure for main/ and lib/
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@56881 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -153,7 +153,7 @@
     <!-- FIXME allow switch if="validate.config"  -->
     <taskdef name="jing" classname="com.thaiopensource.relaxng.util.JingTask">
       <classpath>
-        <fileset dir="./lib/core" includes="*.jar" />
+        <fileset dir="../lib/core" includes="*.jar" />
       </classpath>
     </taskdef>
     <!-- skinconf.xml -->
@@ -172,7 +172,7 @@
     <!-- All stylesheets **/*.xsl -->
     <echo message="validating stylesheets **/*.xsl ..."/>
     <jing rngfile="./webapp/resources/schema/relaxng/xslt.rng">
-      <fileset dir="./main" includes="**/*.xsl"/>
+      <fileset dir="." includes="**/*.xsl"/>
       <fileset dir="${tools.dir}" includes="**/*.xsl"/>
     </jing>
     <!-- sitemap.xmap -->
