Added a custom xml example on the fresh-site
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@56925 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/fresh-site/src/documentation/classes/CatalogManager.properties
+++ b/main/fresh-site/src/documentation/classes/CatalogManager.properties
@@ -47,5 +47,5 @@ verbosity=1
 # directory separator is always slash (/) regardless of operating system
 #
 #catalogs=/home/me/forrest/my-site/src/documentation/resources/schema/catalog.xcat
-catalogs=
-
+catalogs=../resources/schema/catalog.xcat
+relative-catalogs=false
