Add explanation of the "relative-catalogs" property. Copied from: http://xml.apache.org/commons/components/resolver/tips.html#properties
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@57003 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/fresh-site/src/documentation/classes/CatalogManager.properties
+++ b/main/fresh-site/src/documentation/classes/CatalogManager.properties
@@ -42,8 +42,15 @@ verbosity=1
 # catalogs ... list of additional catalogs to load
 #  (Note that Apache Forrest will automatically load its own default catalog
 #  from main/webapp/resources/schema/catalog.xcat)
+# Use either full pathnames or relative pathnames.
 # pathname separator is always semi-colon (;) regardless of operating system
 # directory separator is always slash (/) regardless of operating system
-#
 catalogs=../resources/schema/catalog.xcat
-relative-catalogs=false
+
+# relative-catalogs
+# If false, relative catalog URIs are made absolute with respect to the
+# base URI of the CatalogManager.properties file. This setting only 
+# applies to catalog URIs obtained from the catalogs property in the
+# CatalogManager.properties file
+# Example: relative-catalogs=[yes|no]
+relative-catalogs=no
