keep up to date with plugin rename
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@57070 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/rtf-output/forrest.properties
+++ b/plugins/rtf-output/forrest.properties
@@ -105,4 +105,4 @@
 
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=rtf
+project.required.plugins=rtf-output
