Synchronise with the new version from 'forrest seed site'.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@57148 13f79535-47bb-0310-9956-ffa450edef68

--- a/site-author/classes/CatalogManager.properties
+++ b/site-author/classes/CatalogManager.properties
@@ -28,7 +28,7 @@
 # The level of messages for status/debug (messages go to standard output).
 # The setting here is for your own local catalogs.
 # The verbosity of Forrest's core catalogs is controlled via
-#  forrestcore/src/core/context/WEB-INF/cocoon.xconf
+#  main/webapp/WEB-INF/cocoon.xconf
 #
 # The following messages are provided ...
 #  0 = none
@@ -41,11 +41,17 @@ verbosity=1
 
 # catalogs ... list of additional catalogs to load
 #  (Note that Apache Forrest will automatically load its own default catalog
-#  from src/core/context/resources/schema/catalog.xcat)
-# use full pathnames
+#  from main/webapp/resources/schema/catalog.xcat)
+# Use either full pathnames or relative pathnames.
 # pathname separator is always semi-colon (;) regardless of operating system
 # directory separator is always slash (/) regardless of operating system
-#
-#catalogs=/home/me/forrest/my-site/src/documentation/resources/schema/catalog.xcat
+#catalogs=../resources/schema/catalog.xcat
 catalogs=
 
+# relative-catalogs
+# If false, relative catalog URIs are made absolute with respect to the
+# base URI of the CatalogManager.properties file. This setting only 
+# applies to catalog URIs obtained from the catalogs property in the
+# CatalogManager.properties file
+# Example: relative-catalogs=[yes|no]
+relative-catalogs=no
