moving wiki source format to wiki plugin
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@75999 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/webapp/default-forrest.properties
+++ b/main/webapp/default-forrest.properties
@@ -140,5 +140,5 @@ project.i18n=false
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=OpenOffice.org,simplified-docbook
+project.required.plugins=OpenOffice.org,simplified-docbook,wiki
 
