Deploy local as default to allow local development of plugins
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@76109 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/build.xml
+++ b/plugins/build.xml
@@ -14,7 +14,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<project default="dist" basedir="." name="Forrest build file">
+<project default="local-deploy" basedir="." name="Forrest build file">
   
   <property name="plugins.dist-dir" value="../site-author/content/plugins"/>
   <property name="plugins.localDeploy-dir" value="../build/plugins"/>
