locally deploy required plugins when building from src (prevents the need to go to the network)
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@76149 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -282,6 +282,19 @@
 
 
   <!-- =================================================================== -->
+  <!-- deploy the required plugins locally                                 -->
+  <!-- =================================================================== -->
+  <target name="requiredPlugins" depends="init">
+    <ant antfile="../plugins/build.xml" 
+      target="local-deploy">
+      <property name="plugin-name" 
+        value="org.apache.forrest.plugin.pdf-output"/>
+      <property name="basedir" 
+        value="../plugins"/>
+    </ant>
+  </target>
+  
+  <!-- =================================================================== -->
   <!-- Compile Cocoon java classes                                         -->
   <!-- =================================================================== -->
   <target name="compile" depends="init">
@@ -299,7 +312,7 @@
   <!-- =================================================================== -->
   <!-- Jar Cocoon classes                                                  -->
   <!-- =================================================================== -->
-  <target name="jar" depends="init, compile">
+  <target name="jar" depends="init, compile, requiredPlugins">
     <jar destfile="${build.dir}/xml-forrest.jar"
       basedir="${build.classes}"/>
     <echo>
