plugin.properties don't seem to be being picked up
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@76203 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/eclipse/plugin.xml
+++ b/tools/eclipse/plugin.xml
@@ -17,13 +17,13 @@
 <?eclipse version="3.0"?>
 <plugin
    id="org.apache.forrest.eclipse"
-   name="%pluginName"
+   name="Forrest"
    version="0.1.0"
-   provider-name="%providerName"
+   provider-name="The Apache Software Foundation"
    class="org.apache.forrest.eclipse.ForrestPlugin">
 
    <runtime>
-      <library name="%pluginName.jar">
+      <library name="forrestplugin.jar">
          <export name="*"/>
       </library>
    </runtime>
