create build for src distribution
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@76205 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/eclipse/build.properties
+++ b/tools/eclipse/build.properties
@@ -16,4 +16,12 @@ source.forrestplugin.jar = src/
 output.forrestplugin.jar = bin/
 bin.includes = plugin.xml,\
                forrestplugin.jar,\
-               icons/
+               icons/,\
+               readme.txt
+src.includes = src/,\
+               readme.txt,\
+               plugin.xml,\
+               plugin.properties,\
+               build.properties,\
+               icons/,\
+               .project
