--- a/main/webapp/WEB-INF/web.xml
+++ b/main/webapp/WEB-INF/web.xml
@@ -144,7 +144,7 @@
     -->
     <init-param>
       <param-name>enable-uploads</param-name>
-      <param-value>false</param-value>
+      <param-value>true</param-value>
     </init-param>
     
     <!--
