add testPlugin target - this needs to iterate over all plugins found
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@76255 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -253,8 +253,16 @@
   <!--        Test targets                -->
   <!-- ================================== -->
   <target name="test" 
-          depends="testseed" 
+          depends="testPlugins, testseed" 
           description="Test that the features are okay before committing."/>
+  
+  <target name="testPlugins"
+          description="test each of the plugins">
+    <!-- FIXME: need to iterate over all plugins when testing -->
+    <ant antfile="../plugins/org.apache.forrest.plugin.pdf-output/build.xml" target="test">
+      <property name="basedir" location="../plugins/org.apache.forrest.plugin.pdf-output"/>
+    </ant>
+  </target>
 
   <target name="testseed" depends="init">
     <property name="forrest.home" location="." />  
